--- a/src/main/webapp/Full_Resido/single-activity.html
+++ b/src/main/webapp/Full_Resido/single-activity.html
@@ -563,8 +563,13 @@
 									</div>
 								</form>
 								<ul class="like_share_list">
-									<li id="addToCartBtn"><a href="JavaScript:Void(0);" class="btn btn-likes" data-toggle="tooltip" 
-										data-original-title="Share"><i class="fas fa-shopping-cart"></i>加入購物車</a></li>
+									<li id="addToCartBtn">
+										<a href="JavaScript:Void(0);" class="btn btn-likes" data-toggle="tooltip" 
+										data-original-title="Share">
+										<i class="fas fa-shopping-cart"></i>
+										加入購物車
+										</a>
+									</li>
 									<li><a href="JavaScript:Void(0);" class="btn btn-likes" data-toggle="tooltip" 
 										data-original-title="Save"><i class="fas fa-heart"></i>收藏</a></li>
 								</ul>
