--- a/src/main/webapp/supplier/apply_activity.html
+++ b/src/main/webapp/supplier/apply_activity.html
@@ -452,7 +452,7 @@
 </script>
 
 <!----- 載入地址和郵遞區號 ----->
-<script src="./address.js"></script>
+<script src="./js/address.js"></script>
 <script>
   // 跑回圈，抓資料
   function addr_init(){
